--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tiptap/starter-kit": "^2.26.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "input-otp": "^1.4.2",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.525.0",
@@ -37,6 +38,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
+    "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
