--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
-BETTER_AUTH_SECRET=UGbzklxpczH2kdd2eBBz5a99qWj0LsyR
+BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=http://localhost:3000
-DATABASE_URL=postgresql://meetgoti:Itsmg07@34.135.4.74:5432/stackit?sslmode=disable
+DATABASE_URL=
 
-GOOGLE_CLIENT_ID=1088239542477-5pe68l3k5s3n29cqjoisiivulin6f5jn.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
-MICROSOFT_CLIENT_ID=2a8b61a8-27dd-4357-9d41-5ee3cfb38cdc
-MICROSOFT_CLIENT_SECRET=RGD8Q~6.QzWLWCvXam1yYZ~PFtYCRwgBqwJNmdqc
-MICROSOFT_TENANT_ID=ad10c424-67af-4f78-9422-99b581f4e67b
+MICROSOFT_CLIENT_ID=
+MICROSOFT_CLIENT_SECRET=
+MICROSOFT_TENANT_ID=
 
-GITHUB_CLIENT_ID=Ov23li7TWewTzB0fwAwu
-GITHUB_CLIENT_SECRET=7a82fc0d59faf5ffaa1dd313a62864279a2c2811
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
 
-EMAIL_USER=meetgoti07@gmail.com
-EMAIL_PASS='itzk rncy creo nlec'
+EMAIL_USER=
+EMAIL_PASS=
 
 DOMAIN=http://localhost:3000
 
